<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/envio_meme"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_send" />
        <item
            android:id="@+id/galeria"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/navegador"
            android:icon="@drawable/ic_menu_browser"
            android:title="@string/menu_navigation" />
    </group>
</menu>