<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnviarFragment">

    <ImageView
        android:id="@+id/meme_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:paddingBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/meme_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_btn_send" />

        <TextView
            android:id="@+id/meme_arquivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_name_meme" />

    </LinearLayout>

    <EditText
        android:id="@+id/meme_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_name_edit" />

    <EditText
        android:id="@+id/meme_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/send_description" />

    <Button
        android:id="@+id/meme_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_btn_save" />

</LinearLayout>